<resources>
    <string name="app_name">Babitt\'s Meal Plan</string>
    <string name="title_meal">Meal Planer</string>
    <string name="title_dish">Dish</string>
    <string name="title_settings">Settings</string>
    <string name="title_shopping">Shopping List</string>
    <string name="title_dish_edit">Dish Editor</string>
    <string name="title_dish_details">Dish Details</string>
    <string name="title_dish_image_selector">Dish Image Selector</string>
    <string name="title_meal_plan_period">Meal Plan Period</string>
    <string name="title_meal_plan_period_edit">Meal Plan Period Editor</string>
    <string name="title_meal_plan">Meal Plan</string>
    <string name="title_meal_plan_dish_list">Dish Selection</string>
    <string name="title_meal_plan_dish_selector">Dish Selection Details</string>
    <string name="edit_dish_fragment">Dish Editor</string>
    <string name="add_dish">Add dish</string>
    <string name="new_dish_name">New Dish name</string>
    <string name="save">save</string>
    <string name="edit_dish">Edit Dish</string>
    <string name="delete">delete</string>
    <string name="dialog_alert_title">Attention</string>
    <string name="delete_dish_question">You want to delete this Dish?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="breakfast">breakfast</string>
    <string name="lunch">lunch</string>
    <string name="dinner">dinner</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="set_start_date">set start date</string>
    <string name="set_end_date">set end date</string>
    <string name="set_period">set period</string>
    <string name="start_date">start date</string>
    <string name="end_date">end date</string>
    <string name="summary">summary</string>
    <string name="till">till</string>
    <string name="from">from</string>
    <string name="dialog_information_title">Information</string>
    <string name="minimum_day_information_text">A meal plan has minimal 1 day</string>
    <string name="maximal_day_information_text">A meal plan has maximal 8 days</string>
    <string name="incomplete_dish_edit_text">A dish description parameter is missing</string>
    <string name="ok">OK</string>
    <string name="update_period">Update Mealplan</string>
    <string name="add_period">add mealplan</string>
    <string name="update">Update</string>
    <string name="duration">Duration: %s min</string>
    <string name="test_text">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr.</string>
    <string name="select">select</string>
    <string name="details_dish">Recipe</string>
    <string name="recipe">recipe</string>
    <string name="unselect">unselect</string>
    <string name="reselect">reselect</string>
    <string name="duration_hint">cooking time in minutes</string>
    <string name="description_hint">Describe how to cook the dish</string>
    <string name="search">search</string>
    <string name="null_or_empty_title">Input is empty</string>
    <string name="null_or_empty">image search need minimum 1 character</string>
    <string name="forbidden_symbols_title">Contains forbidden Characters</string>
    <string name="warning">Warning</string>
    <string name="title_meal_planer">Meal Planer</string>
    <string name="title_actual_meal_plan">Actual Meal Plan</string>
    <string name="forbidden_symbols_text">contains forbidden Characters</string>
    <string name="title_add_dish">Add Dish</string>
    <string name="title_dish_detail">Recipe</string>
    <string name="title_dish_image_selection">Image Selection</string>
    <string name="share">share</string>
    <string name="export">export</string>
    <string name="dish">dish</string>
    <string name="ingredient">ingredient</string>
    <string name="date">date</string>
    <string name="no_internet">no internet connection</string>
    <string name="weekday">Weekday</string>
    <string name="email_share_meal_plan_subject">"meal plan"</string>
    <string name="email_share_meal_plan_body">Hi, I created a new meal plan. I hope you like it. You will find an pdf-File attached. It is named MealPlan.pdf .</string>
    <string name="email_share_meal_plan_toast">Meal Plan shared</string>
    <string name="meal_plan_downloaded">meal plan has been downloaded to your download folder</string>
    <string name="dialog_save_error_occured">Couldn\'t save pdf-File to your download-folder</string>
    <string name="dialog_share_error_occured">Couldn\'t share file</string>
    <plurals name="days">
        <item quantity="one">%d day</item>
        <item quantity="other">%d days</item>
    </plurals>
    <string name="min">%s min</string>
    <string name="api_presenter">search by</string>
    <string name="name_of_your_dish">name of your dish</string>
    <string name="plus_a_day">Plus a day</string>
    <string name="minus_a_day">Minus a day</string>
    <string name="info_app">App</string>
    <string name="info_version">Version</string>
    <string name="app_author">Christopher Becker</string>
    <string name="info_author">Author</string>
    <string name="title_info">Info</string>
    <string name="info_support">supported by</string>
    <string name="channel_name">Meal Plan Channel</string>
    <string name="channel_description">cMeal Plan Notification Channel</string>
    <string name="title_notification_meal_plan_saved_to_download">Meal Plan saved</string>
    <string name="text_meal_plan_saved_to_download">into your download folder</string>
    <string name="preference_file_key">de.writer_chris.babittmealplaner.PREFERENCE_FILE_KEY</string>
</resources>