<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.dish.DishDetailFragment">

    <ImageView
        android:id="@+id/img_view_dish"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@drawable/ic_lunch" />

    <TextView
        android:id="@+id/txt_dish_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/img_view_dish"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Pasta Plain" />

    <TextView
        android:id="@+id/txt_dish_duration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/duration"
        app:layout_constraintStart_toStartOf="@+id/txt_dish_name"
        app:layout_constraintTop_toBottomOf="@+id/txt_dish_name"
        tools:text="Duration: 25 min" />


    <TextView
        android:id="@+id/txt_dish_ingredients"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/img_view_dish"
        app:layout_constraintTop_toBottomOf="@+id/img_view_dish"
        tools:text="- Water\n-Salt \n-Pasta" />

    <TextView
        android:id="@+id/txt_dish_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_dish_ingredients"
        tools:text="@string/test_text" />

    <Button
        android:id="@+id/btn_dish_set_changes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_dish_description"
        tools:text="@string/select" />

    <Button
        android:id="@+id/btn_dish_unselect"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:text="@string/unselect"
        app:layout_constraintEnd_toStartOf="@+id/btn_dish_reselect"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_dish_set_changes" />

    <Button
        android:id="@+id/btn_dish_reselect"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:text="@string/reselect"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_dish_unselect"
        app:layout_constraintTop_toBottomOf="@+id/btn_dish_set_changes" />
</androidx.constraintlayout.widget.ConstraintLayout>