<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/MealPlan.ConstraintLayout.Basic"
    tools:context=".ui.mealplaner.fragments.MealDishDetailsFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view_meal_dish_details"
        style="@style/MealPlan.CardView.Round.Big"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/img_view_dish"
            style="@style/MealPlan.ImageView.Big"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/ic_lunch" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/txt_dish_name"
        style="@style/MealPlan.Text.Headline2.Bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card_view_meal_dish_details"
        tools:text="Pasta Plain" />

    <TextView
        android:id="@+id/txt_dish_duration"
        style="@style/MealPlan.Text.Body1"
        android:text="@string/duration"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_dish_name"
        tools:text="Duration: 25 min" />

    <ScrollView
        android:id="@+id/scroll_view_meal_dish_details"
        style="@style/MealPlan.ScrollView"
        app:layout_constraintBottom_toTopOf="@+id/btn_dish_set_changes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_dish_duration">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txt_dish_ingredients"
                style="@style/Theme.MealPlan.TextAppearanceBody1.Bold"
                android:layout_width="match_parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="- Water\n-Salt \n-Pasta" />

            <TextView
                android:id="@+id/txt_dish_description"
                style="@style/MealPlan.Text.Body2"
                android:layout_width="match_parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_dish_ingredients"
                tools:text="@string/test_text" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <Button
        android:id="@+id/btn_dish_set_changes"
        style="@style/MealPlan.Button"
        app:layout_constraintBottom_toTopOf="@+id/btn_dish_unselect"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="@string/select" />

    <Button
        android:id="@+id/btn_dish_unselect"
        style="@style/MealPlan.Button.PartOf2"
        android:text="@string/unselect"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_dish_reselect"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_dish_reselect"
        style="@style/MealPlan.Button.PartOf2"
        android:text="@string/reselect"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_dish_unselect" />
</androidx.constraintlayout.widget.ConstraintLayout>