<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.mealplaner.fragments.MealsFromPeriodFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_meals_from_period"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:itemCount="4"
        tools:listitem="@layout/item_meal_day" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/pdf_view"
        android:layout_width="800dp"
        android:layout_height="600dp"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/pdf_view_head_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_meal_planer"
            android:textSize="25dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/pdf_view_period"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/pdf_view_head_text"
            tools:text="02.01.1984 -30.05.1984" />

        <LinearLayout
            android:id="@+id/pdf_view_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/pdf_view_period">

            <TextView
                android:id="@+id/pdf_view_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_weight="1"
                android:text="@string/date"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/pdf_view_breakfast"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/breakfast"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/pdf_view_lunch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/lunch"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/pdf_view_dinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/dinner"
                android:textSize="25sp" />
        </LinearLayout>

        <ListView
            android:id="@+id/pdf_view_list_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pdf_view_linear_layout" />

        <!--        <androidx.recyclerview.widget.RecyclerView-->
        <!--            android:id="@+id/pdf_view_recycler_view"-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            app:layout_constraintStart_toStartOf="parent"-->
        <!--            app:layout_constraintTop_toBottomOf="@+id/pdf_view_linear_layout"-->
        <!--            tools:listitem="@layout/item_meal_day_pdf" />-->


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>