<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/MealPlan.ConstraintLayout.Basic"
    tools:context=".ui.mealplaner.fragments.EditPeriodFragment">

    <LinearLayout
        android:id="@+id/linear_layout_edit_period"
        style="@style/MealPlan.LinearLayout.Pdf.Horizontal"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="@dimen/linear_layout_column_weight_min"
            android:paddingEnd="@dimen/width_small">

            <androidx.cardview.widget.CardView
                android:id="@+id/card_view_start_edit_period"
                style="@style/MealPlan.CardView.CardLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="@dimen/linear_layout_column_weight_min">

                <androidx.constraintlayout.widget.ConstraintLayout style="@style/MealPlan.ConstraintLayout.Basic">

                    <TextView
                        android:id="@+id/txt_headline_start_date"
                        style="@style/MealPlan.Text.Body1.Bold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingStart="@dimen/width_middle"
                        android:text="@string/from"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/txt_weekday_start_day"
                        style="@style/MealPlan.Text.Body1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingEnd="@dimen/width_middle"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:text="@string/monday" />

                    <View
                        style="@style/MealPlan.Divider"
                        android:layout_width="match_parent"
                        app:layout_constraintBottom_toTopOf="@+id/txt_start_date"
                        app:layout_constraintTop_toBottomOf="@+id/txt_headline_start_date" />

                    <TextView
                        android:id="@+id/txt_start_date"
                        style="@style/MealPlan.Text.Headline1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="@dimen/width_medium"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/txt_weekday_start_day"
                        tools:text="2.1.1984" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="@dimen/linear_layout_column_weight_min"
            android:paddingStart="@dimen/width_small">

            <androidx.cardview.widget.CardView
                android:id="@+id/card_view_end_edit_period"
                style="@style/MealPlan.CardView.CardLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="@dimen/linear_layout_column_weight_min">

                <androidx.constraintlayout.widget.ConstraintLayout style="@style/MealPlan.ConstraintLayout.Basic">

                    <TextView
                        android:id="@+id/txt_headline_end_date"
                        style="@style/Theme.MealPlan.TextAppearanceBody1.Bold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingStart="@dimen/width_middle"
                        android:text="@string/till"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/txt_weekday_end_day"
                        style="@style/Theme.MealPlan.TextAppearanceBody1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingEnd="@dimen/width_middle"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:text="@string/friday" />

                    <View
                        style="@style/MealPlan.Divider"
                        android:layout_width="match_parent"
                        app:layout_constraintBottom_toTopOf="@+id/txt_end_date"
                        app:layout_constraintTop_toBottomOf="@+id/txt_headline_end_date" />

                    <TextView
                        android:id="@+id/txt_end_date"
                        style="@style/MealPlan.Text.Headline1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="@dimen/width_medium"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/txt_weekday_end_day"
                        tools:text="30.5.1984" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </LinearLayout>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_plus_day"
        style="@style/MealPlan.FloatingActionButton.Mini"
        android:contentDescription="@string/plus_a_day"
        android:src="@drawable/ic_add_symb_24"
        app:backgroundTint="?attr/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txt_days_between"
        app:layout_constraintTop_toBottomOf="@id/linear_layout_edit_period" />


    <TextView
        android:id="@+id/txt_days_between"
        style="@style/MealPlan.Text.Headline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/btn_set_changes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linear_layout_edit_period"
        tools:text="7 days" />


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_minus_day"
        style="@style/MealPlan.FloatingActionButton.Mini"
        android:contentDescription="@string/minus_a_day"
        android:src="@drawable/ic_minus_symb_24"
        app:backgroundTint="?attr/colorPrimary"
        app:layout_constraintEnd_toStartOf="@+id/txt_days_between"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linear_layout_edit_period" />


    <Button
        android:id="@+id/btn_set_changes"
        style="@style/MealPlan.Button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fab_plus_day"
        tools:text="@string/save" />

    <Button
        android:id="@+id/btn_delete"
        style="@style/MealPlan.Button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_set_changes"
        tools:text="@string/delete" />

</androidx.constraintlayout.widget.ConstraintLayout>