<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.dish.fragments.DishDetailsFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view_dish_details"
        style="@style/Widget.MealPlan.CardView.Round.Big"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/img_view_dish"
            style="@style/ImageView.Round.Big"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/ic_lunch" />
    </androidx.cardview.widget.CardView>


    <TextView
        android:id="@+id/txt_dish_name"
        style="@style/Theme.MealPlan.TextAppearanceHeadline2.Bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card_view_dish_details"
        tools:text="Pasta Plain" />

    <TextView
        android:id="@+id/txt_dish_duration"
        style="@style/Theme.MealPlan.TextAppearanceBody2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/duration"
        app:layout_constraintStart_toStartOf="@+id/txt_dish_name"
        app:layout_constraintTop_toBottomOf="@+id/txt_dish_name"
        tools:text="Duration: 25 min" />

    <ScrollView
        android:id="@+id/scroll_view_dish_details"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="8dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_dish_set_changes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_dish_duration">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txt_dish_ingredients"
                style="@style/Theme.MealPlan.TextAppearanceBody1.Bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="- Water\n-Salt \n-Pasta" />

            <TextView
                android:id="@+id/txt_dish_description"
                style="@style/Theme.MealPlan.TextAppearanceBody2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_dish_ingredients"
                tools:text="@string/test_text" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <Button
        android:id="@+id/btn_dish_set_changes"
        style="@style/MealPlan.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="@string/select" />

</androidx.constraintlayout.widget.ConstraintLayout>